k8s/istio/ingress/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-demo-7
  annotations:
    # NOTE: external dns does not support kubernetes.io/ingress.class: istio yet as at 01/01/2020 neither for any of other below 
    # annotations either. So if need to use external-dns to configure your route53 overide with nginx as below.This leads
    # to install nginx controller too that leads trafic directed by nginx controller rather than istio.
    kubernetes.io/ingress.class: istio
    external-dns.alpha.kubernetes.io/target: "aws elastic lb hostname"
    # kubernetes.io/ingress.class: nginx
    # kubernetes.io/ingress.allow-http: "false"
    # ingress.kubernetes.io/ssl-redirect: "true"
    # ingress.kubernetes.io/force-ssl-redirect: "true"
    # ingress.kubernetes.io/hsts: "true"
spec:
  rules:
  - host: go-demo.cluster.prageethw.co
    http:
      paths:
      - backend:
          serviceName: go-demo-7
          servicePort: 80
      - backend:
          serviceName: go-demo-7
          servicePort: 443
